Fix for information cards to wrap

--- a/css/styles.css
+++ b/css/styles.css
@@ -91,6 +91,7 @@ header {
     display: flex;
     justify-content: center;
     gap: 20px;
+    flex-wrap: wrap;
 }
 
 .card-img {
